# GPUCompilationTests

./: .envrc  .gitignore  CMakeLists.txt  README.md
cuda/benchmark/: CMakeLists.txt  Kernels.cu  benchmark.cu
cuda/lib/: CMakeLists.txt  cudalib.cu
hip/: CMakeLists.txt
hip/benchmark/: CMakeLists.txt
hip/lib/: CMakeLists.txt
include/: Utils.h  data.h
opencl/: CMakeLists.txt
opencl/src/: hello_world_opencl.c  hello_world_opencl.cpp
